@@ -1,34 +1,34 @@
 /*
-
+ 
 *************************************************************************
-
+ 
 ArmageTron -- Just another Tron Lightcycle Game in 3D.
 Copyright (C) 2000  Manuel Moos (manuel@moosnet.de)
-
+ 
 **************************************************************************
-
+ 
 This program is free software; you can redistribute it and/or
 modify it under the terms of the GNU General Public License
 as published by the Free Software Foundation; either version 2
 of the License, or (at your option) any later version.
-
+ 
 This program is distributed in the hope that it will be useful,
 but WITHOUT ANY WARRANTY; without even the implied warranty of
 MERCHANTABILITY or FITNESS FOR A PARTICULAR PURPOSE.  See the
 GNU General Public License for more details.
-
+ 
 You should have received a copy of the GNU General Public License
 along with this program; if not, write to the Free Software
 Foundation, Inc., 59 Temple Place - Suite 330, Boston, MA  02111-1307, USA.
   
 ***************************************************************************
-
+ 
 */
 
 #ifndef ArmageTron_PLAYER_H
 #define ArmageTron_PLAYER_H
 
-#ifndef MAX_INSTANT_CHAT 
+#ifndef MAX_INSTANT_CHAT
 #define MAX_INSTANT_CHAT 26
 #endif
 
@@ -339,6 +339,7 @@ private:
 
 extern tList<ePlayerNetID> se_PlayerNetIDs;
 extern int    sr_viewportBelongsToPlayer[MAX_VIEWPORTS];
+extern bool se_assignTeamAutomatically;
 
 void se_ChatState( ePlayerNetID::ChatFlags flag, bool cs);
 
