@@ -31,7 +31,7 @@ IF EXIST %AA_DIR%\.svn (
 	echo *** reading SVN repository and revision
 	SET URL=
 	SET REV=
-	FOR /F "tokens=1,2 delims=,>=< " %%i in (%AA_DIR%\.svn\entries) do (
+	FOR /F "tokens=1,2 delims=,>=</ " %%i in (%AA_DIR%\.svn\entries) do (
 		IF *%%i*==*url* (
 			SET URL=%%~j
 		)
@@ -73,11 +73,15 @@ echo.
 echo %REV%
 IF NOT DEFINED REV SET REV=%DATESTAMP:~4%
 
+echo *%MAJOR_VERSION%*
+echo *%DATESTAMP%*
+echo *%DATESTAMP:~4%*
+echo *%HELP_FILE%*
 echo *** generating version.h...
-echo #define MAJOR_VERSION %MAJOR_VERSION:.=,%,%REV% > %HELP_FILE%
-echo #define MINOR_VERSION %MINOR_VERSION% >> %HELP_FILE%
-echo #define VERSION "%MAJOR_VERSION%%MINOR_VERSION%" >> %HELP_FILE%
-echo #define BUILD_DATE "%DATESTAMP%" >> %HELP_FILE%
+echo #define MAJOR_VERSION %MAJOR_VERSION:.=,%,%REV% ^> %HELP_FILE%
+echo #define MINOR_VERSION %MINOR_VERSION% ^>> %HELP_FILE%
+echo #define VERSION "%MAJOR_VERSION%%MINOR_VERSION%" ^>> %HELP_FILE%
+echo #define BUILD_DATE "%DATESTAMP%" ^>> %HELP_FILE%
 
 echo. - Detected: Armagetron Advanced %MAJOR_VERSION%%MINOR_VERSION%
 echo.
